--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,19 +1,23 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
+# Pengujian Modul
+- Modul 1 ✨
+- Modul 2 🙅
+- Modul 3 🙇
+  [more..](https://docs.google.com/presentation/d/1fZwn-rR2Z1ORTH_-THVCNMZuwd6TqCzK91xI-7VMoy0/edit?usp=sharing)
+---
+
 # Conclusion 🤘
 
 <ul>
   <Appear>
-    <li>
-      It takes a lot of practice and effort <br />
-      to write clean code
-    </li>
-    <li>It is definitely worth the extra effort</li>
+    <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
+    <li>pengujian melalui pengukuran semantik dengan nilai threshold yang ditentukan</li>
+    <li>pengujian klasifikasi menggunakan entaiment dengan tensorflow</li>
     <li>Perfect code is not always feasible</li>
     <li>
-      It is important to try and write code as <br />
-      cleanly as possible
+      proses didapatkan memiliki ratarata terbaik untuk mendeteksi kebergantungan antar kebutuhan tersebut.
     </li>
   </Appear>
 </ul>
@@ -34,16 +38,8 @@ import { CodeSurferLayout } from 'code-surfer'
 
 # Resources 🔖
 
-- This deck: [hooks-in-a-nutshell.now.sh](https://slick-and-clean-javascript.now.sh)
-- Repository: [grikomsn/hooks-in-a-nutshell](https://github.com/grikomsn/slick-and-clean-javascript)
+- This deck: [presentasi_pratesis](https://pratesis-asyrofi.heroku.com)
 
----
-
-# References 💼
-
-- [A guide on how to become a better programmer](https://www.butterfly.com.au/blog/website-development/clean-high-quality-code-a-guide-on-how-to-become-a-better-programmer)
-- [Going Sane with JavaScript](https://docs.google.com/presentation/d/10jtuDrZOgNNyFUegIkbZJaNeFUwgPqJ_kQ2asZCy2R0/edit#slide=id.g4739b39c87_0_159)
-- [ryanmcdermott/clean-code-javascript](https://github.com/ryanmcdermott/clean-code-javascript)
 
 ---
 
