perubahan closing slide

--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -13,12 +13,9 @@ import { CodeSurferLayout } from 'code-surfer'
 <ul>
   <Appear>
     <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
-    <li>pengujian melalui pengukuran semantik dengan nilai threshold yang ditentukan</li>
+    <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
     <li>pengujian klasifikasi menggunakan entaiment dengan tensorflow</li>
-    <li>Perfect code is not always feasible</li>
-    <li>
-      proses didapatkan memiliki ratarata terbaik untuk mendeteksi kebergantungan antar kebutuhan tersebut.
-    </li>
+    <li> Selain pengujian tersebut, pengujian dengan beberapa modul yang lebih efektif.</li>
   </Appear>
 </ul>
 
