--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -2,10 +2,9 @@ import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
 # Pengujian Modul
-- Modul 1 ✨
-- Modul 2 🙅
-- Modul 3 🙇
-  [more..](https://docs.google.com/presentation/d/1fZwn-rR2Z1ORTH_-THVCNMZuwd6TqCzK91xI-7VMoy0/edit?usp=sharing)
+- Modul 1: Parsing Data XMI ✨
+- Modul 2: Memetakan data Kebutuhan SKPL & UCD  🙅
+- Modul 3: Mencari Relasi antar kebutuhan 🙇
 ---
 
 # Conclusion 🤘
