--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -34,7 +34,7 @@ import { CodeSurferLayout } from 'code-surfer'
 
 # Resources 🔖
 
-- This deck: [presentasi_pratesis](https://pratesis-asyrofi.heroku.com)
+- This deck: [presentasi_pratesis](https://s.id/presentasi-asyrofi.com)
 
 
 ---
