--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,10 +1,10 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
-# Pengujian Modul
-- Modul 1: Parsing Data XMI ✨
-- Modul 2: Memetakan data Kebutuhan SKPL & UCD  🙅
-- Modul 3: Mencari Relasi antar kebutuhan 🙇
+# Pengujian Relasi antara Kebutuhan dan Usecase
+- Pemetaan Aktor, Usecase, dan Relasinya ✨
+- Pemetaan Berkas XMI dan Deskripsi Usecase  🙅
+- Pemetaan Relasi Gabungan XMI-UCD  🙇
 ---
 
 # Conclusion 🤘
@@ -12,29 +12,17 @@ import { CodeSurferLayout } from 'code-surfer'
 <ul>
   <Appear>
     <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
-    <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
     <li>pengujian klasifikasi menggunakan entaiment dengan tensorflow</li>
-    <li> Selain pengujian tersebut, pengujian dengan beberapa modul yang lebih efektif.</li>
+    <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
+    <li>Selain pengujian tersebut, pengujian dengan pemetaan berkas XMI dan UCD.</li>
   </Appear>
 </ul>
 
 ---
 
-![gif](https://media3.giphy.com/media/upg0i1m4DLe5q/source.gif)
+# Referensi 🔖
 
-###### That's all, folks! 🐰
-
----
-
-![gif](https://media.giphy.com/media/l0HlRnAWXxn0MhKLK/giphy.gif)
-
-###### Question Time 🙋
-
----
-
-# Resources 🔖
-
-- This deck: [presentasi_pratesis](https://s.id/presentasi-asyrofi.com)
+- [publikasi_ilmiah](https://ieeexplore.ieee.org/document/9315489)
 
 
 ---
