--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -22,7 +22,7 @@ import { CodeSurferLayout } from 'code-surfer'
 
 # Referensi 🔖
 
-- [publikasi_ilmiah](https://ieeexplore.ieee.org/document/9315489)
+[publikasi_ilmiah](https://ieeexplore.ieee.org/document/9315489)
 
 
 ---
