--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,13 +1,13 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
-# Pengujian Relasi antara Kebutuhan dan Usecase
+# Pengujian Relasi
 - Pemetaan Aktor, Usecase, dan Relasinya ✨
 - Pemetaan Berkas XMI dan Deskripsi Usecase  🙅
 - Pemetaan Relasi Gabungan XMI-UCD  🙇 [more](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
 ---
 
-# Conclusion 🤘
+# Kesimpulan 🤘
 
 <ul>
   <Appear>
