--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -14,7 +14,7 @@ import { CodeSurferLayout } from 'code-surfer'
     <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
     <li>pengujian klasifikasi menggunakan entaiment dengan tensorflow</li>
     <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
-    <li>Selain pengujian tersebut, pengujian dengan pemetaan berkas XMI dan UCD lebih baik dalam peetaan kebergantungan kebutuhan tersebut.</li>
+    <li>Adapun, pengujian dengan pemetaan berkas XMI dan UCD lebih baik dalam peetaan kebergantungan kebutuhan tersebut.</li>
   </Appear>
 </ul>
 
