--- a/slides/01-introduction.mdx
+++ b/slides/01-introduction.mdx
@@ -11,7 +11,7 @@ Ekstraksi Kebergatungan Evolutionary Requirements antar kebutuhan dengan pemrose
 
 ---
 
-# Table of Contents
+# Daftar Isi
 - Latar Belakang ✨
 - Penelitian sebelumnya 👨‍💻
 - Penggalian Ulasan Model Kebergatungan 🙅
