--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -12,7 +12,7 @@ import { CodeSurferLayout } from 'code-surfer'
 <ul>
   <Appear>
     <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
-    <li>pengujian klasifikasi menggunakan entaiment dengan tensorflow</li>
+    <li>pengujian kebergantungan antar kebutuhan menggunakan entaiment</li>
     <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
     <li>Adapun, pengujian dengan pemetaan berkas XMI dan UCD lebih baik dalam pemetaan kebergantungan kebutuhan.</li>
   </Appear>
