--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -3,9 +3,9 @@ import { CodeSurferLayout } from 'code-surfer'
 
 # Pengujian 
 - Bagaimana Cara Kerja Word2vec? 🙅
-- Bagaimana Cara Kerja WMD? 🙇
-- Bagaimana cara kerja LDA? 👨‍💻
-- Bagaimana cara kerja Doc2vec? 👏
+- Hasil Pengujian Word2Vec 🙇
+- Bagaimana cara kerja WMD? 👨‍💻
+- Hasil Pengujian WMD 👏
   [more..](https://docs.google.com/presentation/d/1O0E7MSXf-KOGmXD05FlminhMrGlvBINZcYu-crI45vQ/edit?usp=sharing)
 
 ---
