--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -4,7 +4,7 @@ import { CodeSurferLayout } from 'code-surfer'
 # Pengujian Relasi
 - Pemetaan Aktor, Usecase, dan Relasinya ✨
 - Pemetaan Berkas XMI dan Deskripsi Usecase  🙅
-- Pemetaan Relasi Gabungan XMI-UCD  🙇 [more](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
+- Pemetaan Relasi Gabungan XMI-UCD  🙇 [...](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
 ---
 
 # Kesimpulan 🤘
