--- a/slides/01-introduction.mdx
+++ b/slides/01-introduction.mdx
@@ -12,11 +12,11 @@ Ekstraksi Kebergatungan Evolutionary Requirements antar kebutuhan dengan pemrose
 ---
 
 # Daftar Isi
-- Latar Belakang ✨
-- Penelitian sebelumnya 👨‍💻
-- Penggalian Ulasan Model Kebergatungan 🙅
-- Metode Penelitian 🙇
-- Dokumentasi dan Pengujian 👏
+- Latar Belakang 
+- Penelitian sebelumnya
+- Penggalian Ulasan Model Kebergatungan
+- Metode Penelitian
+- Dokumentasi dan Pengujian
   [...](https://docs.google.com/presentation/d/1e4VAUfFaBRF3XnRbdTLZm9w3-YV45a766G0QadqiEM8/edit?usp=sharing)
 
 ---
