--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -2,10 +2,10 @@ import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
 # Pengujian 
-- Bagaimana Cara Kerja Word2vec? 🙅
-- Hasil Pengujian Word2Vec 🙇
-- Bagaimana cara kerja WMD? 👨‍💻
-- Hasil Pengujian WMD 👏
+- Bagaimana Cara Kerja Word2vec?
+- Hasil Pengujian Word2Vec
+- Bagaimana cara kerja WMD?
+- Hasil Pengujian WMD
   [...](https://docs.google.com/presentation/d/1O0E7MSXf-KOGmXD05FlminhMrGlvBINZcYu-crI45vQ/edit?usp=sharing)
 
 ---
