--- a/slides/03-others.mdx
+++ b/slides/03-others.mdx
@@ -2,9 +2,9 @@ import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
 # Pengujian Entailment
-- Pendahuluan ✨
-- Entailment Tekstual Berdasarkan Metode LSTM 🙅
-- HasilPercobaan 🙇
+- Pendahuluan
+- Entailment Tekstual Berdasarkan Metode LSTM
+- HasilPercobaan
   [...](https://docs.google.com/presentation/d/19bBFYP8DZMF8us6wNJlyfev5P_Lkt7nlnEJT2MSJ_R0/edit?usp=sharing)
 
 
