--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -2,12 +2,12 @@ import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
 # Pengujian Relasi
-- Pemetaan Aktor, Usecase, dan Relasinya ✨
-- Pemetaan Berkas XMI dan Deskripsi Usecase  🙅
-- Pemetaan Relasi Gabungan XMI-UCD  🙇 [...](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
+- Pemetaan Aktor, Usecase, dan Relasinya
+- Pemetaan Berkas XMI dan Deskripsi Usecase
+- Pemetaan Relasi Gabungan XMI-UCD [...](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
 ---
 
-# Kesimpulan 🤘
+# Kesimpulan
 
 <ul>
   <Appear>
