--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -11,7 +11,7 @@ import { CodeSurferLayout } from 'code-surfer'
 
 <ul>
   <Appear>
-    <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata</li>
+    <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata word2vec</li>
     <li>pengujian kebergantungan antar kebutuhan menggunakan entaiment</li>
     <li>pengujian semantik dengan nilai threshold yang ditentukan</li>
     <li>Adapun, pengujian dengan pemetaan berkas XMI dan UCD lebih baik dalam pemetaan kebergantungan kebutuhan.</li>
