--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -23,6 +23,7 @@ def word2vec():
     vektor_word = word_vectors.T
     return vektor_word
 ```
+```python
 def tableWord2vec():
     tabelWord2vec = []
     for num in range(0, len(cleaned_text)):
@@ -30,7 +31,8 @@ def tableWord2vec():
       tabelWor2vec.append(a)
     word2vecResult = pd.DataFrame(coba, index = id_requirement, columns = id_requirement)
     return word2vecResult
-
+```
+  
 ```python
 
   class wmdistance(object):
