--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,5 +1,6 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
+import { LiveCode } from 'mdx-deck-live-code';
 
 # Pengujian Relasi
 - Pemetaan Aktor, Usecase, dan Relasinya
@@ -30,3 +31,12 @@ import { CodeSurferLayout } from 'code-surfer'
 
 ![gif](https://media.giphy.com/media/VGHtpsS3UJNRK/giphy.gif)
 ###### Good morning, and in case I don't see ya, <br /> good afternoon, good evening, and goodnight.
+
+---
+### Question
+<LiveCode
+  title="questionForm"
+  size="large"
+  code="<p>Pertanyaan</p>"
+/>
+---
