--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,6 +1,6 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
-import { LiveCode } from 'mdx-deck-live-code';
+import { LiveCode } from 'mdx-deck-live-code'
 
 # Pengujian Relasi
 - Pemetaan Aktor, Usecase, dan Relasinya
