--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -33,10 +33,8 @@ import { LiveCode } from 'mdx-deck-live-code'
 ###### Good morning, and in case I don't see ya, <br /> good afternoon, good evening, and goodnight.
 
 ---
-### Question
-<LiveCode
-  title="questionForm"
-  size="large"
-  code="<p>Pertanyaan</p>"
-/>
+<Notes>
+- Only visible in presenter mode
+- Markdown syntax can be used with empty lines around the content
+</Notes>
 ---
