--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -9,11 +9,6 @@ import { LiveCode } from 'mdx-deck-live-code'
 ---
 
 # Kesimpulan
-<Notes>
-- Only visible in presenter mode
-- Markdown syntax can be used with empty lines around the content
-</Notes>
-
 <ul>
   <Appear>
     <li>Untuk mendeteksi kebergantungan antar kebutuhan dapat dilakukan dengan pembobotan kata word2vec</li>
@@ -35,3 +30,21 @@ import { LiveCode } from 'mdx-deck-live-code'
 
 ![gif](https://media.giphy.com/media/VGHtpsS3UJNRK/giphy.gif)
 ###### Good morning, and in case I don't see ya, <br /> good afternoon, good evening, and goodnight.
+
+# Slide Content
+
+<Notes>
+
+- Only visible in presenter mode
+- Markdown syntax can be used with empty lines around the content
+
+</Notes>
+
+---
+<LiveCode
+  title="How to greet people"
+  size="small"
+  code="<p>Hello World!</p>"
+/>
+---
+
