--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -1,28 +1,18 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
-import { LiveCode } from 'mdx-deck-live-code'
 
-# Slide Content
-
-<Notes>
-
-- Only visible in presenter mode
-- Markdown syntax can be used with empty lines around the content
-
-</Notes>
-
----
-<LiveCode
-  title="How to greet people"
-  size="small"
-  code="<p>Hello World!</p>"
-/>
 ---
 
 # Pengujian Relasi
 - Pemetaan Aktor, Usecase, dan Relasinya
 - Pemetaan Berkas XMI dan Deskripsi Usecase
 - Pemetaan Relasi Gabungan XMI-UCD [...](https://docs.google.com/presentation/d/1Kg4DxQiV2NNXTzUH_kgJb3Ev2fkzqCArpXJnJrtt2tE/edit?usp=sharing)
+
+<Notes>
+Dan terakhir skenario pengujian 3. Dalam pengujian relasi ini, penulis telah dapat memetakan aktor, usecase dan relasinya.
+serta pemetaan berkas XMI dan deskripsi usecase serta hasil gabungan relasi XMI-UCD tersebut.
+</Notes>
+
 ---
 
 # Kesimpulan
@@ -35,11 +25,23 @@ import { LiveCode } from 'mdx-deck-live-code'
   </Appear>
 </ul>
 
+<Notes>
+Maka dari hasil pengujian tersebut dapat disimpulkan bahwa, peneliti telah dapat mendeketeksi 
+kebergantungan antar kebutuhan melalui pembobotan kata menggunakan word2vec. kebergantungan kebutuhan menggunakan entailment
+serta mampu menguji nilai semantik berdasarkan nilai threshold yang ditentukan.
+Setelah dikaji, maka pemetaan berkas XMI dan UCD lebih baik dalam pemetaan kebergantungan kebutuhan tersebut. 
+</Notes>
+
+
 ---
 
 # Referensi 🔖
 
 [publikasi ilmiah](https://ieeexplore.ieee.org/document/9315489)
+
+<Notes>
+Berikut ini adalah referensi yang telah dipublikasikan oleh penulis. 
+</Notes>
 
 
 ---
@@ -47,3 +49,8 @@ import { LiveCode } from 'mdx-deck-live-code'
 
 ![gif](https://media.giphy.com/media/VGHtpsS3UJNRK/giphy.gif)
 ###### Good morning, and in case I don't see ya, <br /> good afternoon, good evening, and goodnight.
+<Notes>
+Sekian itu saja yang bisa penulis sampaikan, sekian terima kasih..
+wassalamualaikum, wr. wb. 
+</Notes>
+
