--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -7,6 +7,10 @@ import { CodeSurferLayout } from 'code-surfer'
 - Bagaimana cara kerja WMD?
 - Hasil Pengujian WMD
   [...](https://docs.google.com/presentation/d/1O0E7MSXf-KOGmXD05FlminhMrGlvBINZcYu-crI45vQ/edit?usp=sharing)
+<Notes>
+Selanjutnya skenario pengujian 1, Adapun beberap pengujian yang telah dikerjakan yaitu: bagaimana cara kerja word2vec
+dan word mover distance (WMD) dan hasil pengujiannya
+</Notes>
 
 ---
 <CodeSurferLayout>
@@ -23,7 +27,9 @@ def word2vec():
     word_vectors = pd.DataFrame(modelWord2vec.wv.syn0[term_indices, :], index=ordered_terms, columns= id_requirement)
     vektor_word = word_vectors.T
     return vektor_word
+
 ```
+
 ```python
 def tableWord2vec():
     tabelWord2vec = []
@@ -38,19 +44,18 @@ def tableWord2vec():
 ```python
 
   class wmdistance(object):
-    
     def __init__(self):
         self.stopwords = stopwords.words('english')
         self.w2v_path = 'GoogleNews-vectors-negative300.bin.gz'
         self.loadW2V()
         self.w2v_model.init_sims(replace=True)
         print("\nloaded word2vec model : ")
-    
-    
     def loadW2V(self):
         if not os.path.exists(self.w2v_path):
             raise ValueError("SKIP: You need to download the google news model")
         self.w2v_model = KeyedVectors.load_word2vec_format(self.w2v_path, limit=300000, binary=True)  
+
+
 ```
   
 ```python
