--- a/slides/03-others.mdx
+++ b/slides/03-others.mdx
@@ -6,8 +6,10 @@ import { CodeSurferLayout } from 'code-surfer'
 - Entailment Tekstual Berdasarkan Metode LSTM
 - HasilPercobaan
   [...](https://docs.google.com/presentation/d/19bBFYP8DZMF8us6wNJlyfev5P_Lkt7nlnEJT2MSJ_R0/edit?usp=sharing)
-
-
+<Notes>
+Selanjutnya skenario pengujian 2, yaitu pengujian entailment yang dijelaskan dimulai dari Pendahuluan,
+entailment Tekstual berdasarkan metode LSTM, dan hasil HasilPercobaan yang telah dikerjakan
+</Notes>
 ---
 
 <CodeSurferLayout>
@@ -22,7 +24,9 @@ def unzip_single_file(zip_file_name, output_file_name):
                         with zipped.open(info) as requested_file:
                             out_file.write(requested_file.read())
                             return
+
 ```
+
 ```python
 def sentence2sequence(sentence):
     tokens = sentence.lower().split(" ")
@@ -41,8 +45,8 @@ def sentence2sequence(sentence):
             else:
                 i = i-1
     return rows, words
-
 ```
+
 ```python
 def visualize(sentence):
     rows, words = sentence2sequence(sentence)
@@ -76,7 +80,6 @@ def fit_to_size(matrix, shape):
     slices = [slice(0,min(dim,shape[e])) for e, dim in enumerate(matrix.shape)]
     res[slices] = matrix[slices]
     return res
-
 ```
 
 ```python
