--- a/slides/01-introduction.mdx
+++ b/slides/01-introduction.mdx
@@ -34,14 +34,14 @@ Penggalian Ulasan model kebergantungan, metode penelitian dan dokumentasi serta 
 
 <CodeSurferLayout>
 
-```python
+```python subtitle='function untuk melakukan preprocessing'
 def preprocessing(index0):
   x1 = pd.ExcelFile(index0)
   dfs = {sh:x1.parse(sh) for sh in x1.sheet_names}
   return dfs
 ```
 
-```python
+```python subtitle='function untuk mengecek dataset secara full'
 def fulldataset(index0, index1):
   x1 = pd.ExcelFile(index0)
   dfs = {sh:x1.parse(sh) for sh in x1.sheet_names}[index1]
@@ -49,15 +49,14 @@ def fulldataset(index0, index1):
 
 ```
 
-```python
+```python subtitle='function untuk mengecek datase secara spesifik'
 def dataset(index0, index1, index2, index3):
   x1 = pd.ExcelFile(index0)
   dfs = {sh:pd.x1.parse(sh) for sh in pd.x1.sheet_names}[index1][index2][index3]
   return dfs
 ```
 
-```python
-
+```python subtitle='function untuk menyiapkan data ke sebuah list'
 def apply_cleaning_function_to_list(X):
     cleaned_X = []
     for element in X:
@@ -65,7 +64,7 @@ def apply_cleaning_function_to_list(X):
     return cleaned_X
 ```
 
-```python
+```python subtitle='function untuk membersihkan data'
 def clean_text(raw_text):    
     text = raw_text.lower() # Convert to lower case
     tokens = nltk.word_tokenize(text) # Tokenize    
