--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -1,13 +1,12 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
-# Pengujian 
-- Bagaimana Cara Kerja Word2vec?
-- Hasil Pengujian Word2Vec
-- Bagaimana cara kerja WMD?
-- Hasil Pengujian WMD
+# Ekspart 
+- Prapemrosesan teks
+- Mengekstraksi klausa
+- Memeriksa dan mengevauasi 
+- Mencari relasi partOf
   [...](https://docs.google.com/presentation/d/1O0E7MSXf-KOGmXD05FlminhMrGlvBINZcYu-crI45vQ/edit?usp=sharing)
 <Notes>
-Selanjutnya skenario pengujian 1, Adapun beberap pengujian yang telah dikerjakan yaitu: bagaimana cara kerja word2vec
-dan word mover distance (WMD) dan hasil pengujiannya
+Selanjutnya penjelasan seputar metode ekspart untuk mencari relasi partOf pada kebutuhan
 </Notes>
