--- a/slides/03-others.mdx
+++ b/slides/03-others.mdx
@@ -1,14 +1,13 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
-# Pengujian Entailment
-- Pendahuluan
-- Entailment Tekstual Berdasarkan Metode LSTM
-- HasilPercobaan
+# Metode Ekscase
+- Eksraksi berkas XMI 
+- Ekstraksi dokumen SKPL dan UCD
+- Mencari relasi include dan extend
   [...](https://docs.google.com/presentation/d/19bBFYP8DZMF8us6wNJlyfev5P_Lkt7nlnEJT2MSJ_R0/edit?usp=sharing)
 
 <Notes>
-Selanjutnya skenario pengujian 2, yaitu pengujian entailment yang dijelaskan dimulai dari Pendahuluan,
-entailment Tekstual berdasarkan metode LSTM, dan hasil HasilPercobaan yang telah dikerjakan
+Selanjutnya penjelasan seputar metode ekspart untuk mencari relasi include dan extend pada kasus penggunaan
 </Notes>
 ---
