--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -1,7 +1,7 @@
 import { Appear, Embed, Notes } from 'mdx-deck'
 import { CodeSurferLayout } from 'code-surfer'
 
-# Ekspart 
+# Metode Ekspart 
 - Prapemrosesan teks
 - Mengekstraksi klausa
 - Memeriksa dan mengevauasi 
