--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -33,9 +33,9 @@ Saran dari peneliti, untuk mengembangkaan metode lebih baik dan cepat. Sebab alg
 
 # Referensi 🔖
 
-[publikasi ilmiah](https://ieeexplore.ieee.org/document/9315489)
-[zenodo_library](https://zenodo.org/record/5528399)
-[pypi_package](https://pypi.org/project/extractreq/)
+- [publikasi ilmiah](https://ieeexplore.ieee.org/document/9315489)
+- [zenodo_library](https://zenodo.org/record/5528399)
+- [pypi_package](https://pypi.org/project/extractreq/)
 
 <Notes>
 Berikut ini adalah referensi yang telah dipublikasikan dan source code yang tleah dikembangkan oleh penulis 
