--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -10,3 +10,9 @@ import { CodeSurferLayout } from 'code-surfer'
 <Notes>
 Selanjutnya penjelasan seputar metode ekspart untuk mencari relasi partOf pada kebutuhan
 </Notes>
+
+---
+
+# [Source Code](https://pypi.org/project/extractreq/)
+
+![Gambar](https://github.com/asyrofist/presentasi/blob/master/partOf.png)
