--- a/slides/02-content.mdx
+++ b/slides/02-content.mdx
@@ -11,8 +11,18 @@ import { CodeSurferLayout } from 'code-surfer'
 Selanjutnya penjelasan seputar metode ekspart untuk mencari relasi partOf pada kebutuhan
 </Notes>
 
-<!-- ---
+---
 
-# [Source Code](https://pypi.org/project/extractreq/)
-![Gambar](https://github.com/asyrofist/presentasi/blob/master/partOf.png)
- -->
+<Image
+  src='https://source.unsplash.com/random/768x2048?brooklyn'
+  style={{
+    display: 'flex',
+    alignItems: 'center',
+    justifyContent: 'center',
+    color: 'white',
+    backgroundColor: 'black',
+  }}>
+
+## Background Image
+
+</Image>
