--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -5,7 +5,7 @@ import { CodeSurferLayout } from 'code-surfer'
 - Dataset Pengujian
 - Pengujian relasi partOf antar kebutuhan
 - Pengujian relasi include dan extend pada kasus penggunaan
-- Memvisualisasikan Graf Kebergantungan Kebutuhan[...]((https://docs.google.com/presentation/d/1MVyaCKROviSn0CJ-l4zwNU60I0XRR--DQ1Z1qLS4AHs/edit?usp=sharing)
+- Memvisualisasikan Graf Kebergantungan Kebutuhan[...](https://docs.google.com/presentation/d/1MVyaCKROviSn0CJ-l4zwNU60I0XRR--DQ1Z1qLS4AHs/edit?usp=sharing)
 
 <Notes>
 Dan terakhir membahas seputar hasil yang telah dilakukan untuk menguji relasi partOf, include, dan extend, serta memvisualisasikan Graf Kebergantungan Kebutuhan tersebut.
