--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -5,7 +5,7 @@ import { CodeSurferLayout } from 'code-surfer'
 - Dataset Pengujian
 - Pengujian relasi partOf antar kebutuhan
 - Pengujian relasi include dan extend pada kasus penggunaan
-- Memvisualisasikan Graf Kebergantungan Kebutuhan[...](https://docs.google.com/presentation/d/1MVyaCKROviSn0CJ-l4zwNU60I0XRR--DQ1Z1qLS4AHs/edit?usp=sharing)
+- Memvisualisasikan Graf Kebergantungan Kebutuhan[...](https://docs.google.com/presentation/d/e/2PACX-1vRprVvYB9rbD4WNwIZN-wtDLuGnZlMP--e6W3piO_5Dws0aAZ5jbYBs7Y3k_m1FjeSm-2mmPHOSWXcg/pub?start=true&loop=false&delayms=10000&slide=id.p1)
 
 <Notes>
 Dan terakhir membahas seputar hasil yang telah dilakukan untuk menguji relasi partOf, include, dan extend, serta memvisualisasikan Graf Kebergantungan Kebutuhan tersebut.
