--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -36,6 +36,7 @@ Saran dari peneliti, untuk mengembangkaan metode lebih baik dan cepat. Sebab alg
 - [publikasi ilmiah](https://ieeexplore.ieee.org/document/9315489)
 - [zenodo_library](https://zenodo.org/record/5528399)
 - [pypi_package](https://pypi.org/project/extractreq/)
+- [demo](https://share.streamlit.io/asyrofist/demo_exctractreq/main/main.py)
 
 <Notes>
 Berikut ini adalah referensi yang telah dipublikasikan dan source code yang tleah dikembangkan oleh penulis 
