--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -35,6 +35,7 @@ Saran dari peneliti, untuk mengembangkaan metode lebih baik dan cepat. Sebab alg
 
 - [publikasi ilmiah](https://ieeexplore.ieee.org/document/9315489)
 - [zenodo_library](https://zenodo.org/record/5528399)
+- [dokumentasi](https://asyrofist.github.io/extractreq/)
 - [pypi_package](https://pypi.org/project/extractreq/)
 - [demo](https://extractionreq.herokuapp.com/)
 
