--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -39,6 +39,16 @@ Saran dari peneliti, untuk mengembangkaan metode lebih baik dan cepat. Sebab alg
 - [pypi_package](https://pypi.org/project/extractreq/)
 - [demo](https://extractionreq.herokuapp.com/)
 
+<Image
+  src='https://source.unsplash.com/random/768x2048?brooklyn'
+  style={{
+    display: 'flex',
+    alignItems: 'left',
+    justifyContent: 'left',
+    color: 'white',
+    backgroundColor: 'black',
+  }}>
+
 <Notes>
 Berikut ini adalah referensi yang telah dipublikasikan dan source code yang tleah dikembangkan oleh penulis 
 </Notes>
