--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -37,7 +37,7 @@ Saran dari peneliti, untuk mengembangkaan metode lebih baik dan cepat. Sebab alg
 - [zenodo_library](https://zenodo.org/record/5528399)
 - [dokumentasi](https://asyrofist.github.io/extractreq/)
 - [pypi_package](https://pypi.org/project/extractreq/)
-- [demo](https://extractionreq.herokuapp.com/)
+- [readthedocs](https://extraction-requirement.readthedocs.io/en/latest)
 
 <Image
   src='https://source.unsplash.com/random/768x2048?brooklyn'
