--- a/slides/99-closing.mdx
+++ b/slides/99-closing.mdx
@@ -60,4 +60,56 @@ Berikut ini adalah referensi yang telah dipublikasikan dan source code yang tlea
 Sekian itu saja yang bisa penulis sampaikan, sekian terima kasih..
 wassalamualaikum, wr. wb. 
 </Notes>
+  
 
+# Hello!
+
+---
+
+<Invert>
+
+## Invert Layout
+
+</Invert>
+
+---
+
+<Split>
+
+![](https://source.unsplash.com/random/768x2048?brooklyn)
+
+## Split Layout
+
+</Split>
+
+---
+
+<SplitRight>
+
+![](https://source.unsplash.com/random/768x2048?brooklyn)
+
+## SplitRight Layout
+
+</SplitRight>
+
+---
+
+<Horizontal>
+
+## Horizontal Layout
+
+![](https://source.unsplash.com/random/768x2048?brooklyn)
+
+![](https://source.unsplash.com/random/768x2048?brooklyn)
+
+</Horizontal>
+
+---
+
+<FullScreenCode>
+
+```jsx
+<Button>FullScreenCode Layout</Button>
+```
+
+</FullScreenCode>
